Numerous adjustments due to software and database changes

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,4 +1,4 @@
-#Mon Oct 08 12:30:22 CDT 2018
+#Mon Dec 03 15:58:39 CST 2018
 execution.default.executionConfiguration="Firefox"
 execution.default.timeout=15
 execution.default.openReportAfterExecuting=false
