--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,4 @@
-#Mon Oct 08 12:30:22 CDT 2018
+#Mon Dec 03 16:02:00 CST 2018
 execution.default.webUi.enablePageLoadTimeout=false
 execution.default.webUi.pageLoadTimeout=30
 execution.default.webUi.ignorePageLoadTimeOutException=false
